# smart-garden-gateway-websocketd

./: .gitignore  Cargo.toml  README.md  dev-cert.pem  dev-key.pem  forward-ipc.sh
.github/workflows/: main.yml
src/: main.rs
tests/: conftest.py  requirements.txt  test_integration.py
