[package]
name = "wsbridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22"
futures-util = "0.3.31"
gardenalog = { git = "https://github.com/husqvarnagroup/smart-garden-gateway-crates.git" }
hostname = "0.4"
local-ip-address = "0.6"
mdns-sd = "0.11"
native-tls = "0.2.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.99"
sg-ipc = { git = "https://github.com/husqvarnagroup/smart-garden-gateway-crates.git" }
tokio = { version = "1.43.0", features = ["macros", "net", "time", "io-util", "fs", "signal"] }
tokio-native-tls = "0.3"
tokio-tungstenite = "0.28.0"
tracing = "0.1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
